--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+  <title>Lotto Number Generator</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+    }
+    #lotto-numbers {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .number {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #f2f2f2;
+      margin: 0 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <h1>Lotto Number Generator</h1>
+  <div id="lotto-numbers">
+    <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
+  </div>
+  <button onclick="generateNumbers()">Generate</button>
+
+  <script>
+    function generateNumbers() {
+      const numbers = [];
+      while (numbers.length < 6) {
+        const randomNumber = Math.floor(Math.random() * 45) + 1;
+        if (!numbers.includes(randomNumber)) {
+          numbers.push(randomNumber);
+        }
+      }
+      numbers.sort((a, b) => a - b);
+
+      const numberElements = document.querySelectorAll('.number');
+      for (let i = 0; i < numberElements.length; i++) {
+        numberElements[i].textContent = numbers[i];
+      }
+    }
+  </script>
 </body>
 </html>
