--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
             </div>
             <button id="generate-btn">Generate Numbers</button>
         </main>
+
+        <section id="partnership-inquiry">
+            <h2>제휴 문의</h2>
+            <form action="https://formspree.io/f/your_form_id" method="POST">
+                <label for="name">이름:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">이메일:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">메시지:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit">문의 보내기</button>
+            </form>
+        </section>
+
         <footer>
             <p>&copy; 2026 Lucky Lotto. All rights reserved.</p>
         </footer>
