fix: Update Formspree endpoint in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section id="partnership-inquiry">
             <h2>제휴 문의</h2>
-            <form action="https://formspree.io/f/your_form_id" method="POST">
+            <form action="https://formspree.io/f/mwvbezna" method="POST">
                 <label for="name">이름:</label>
                 <input type="text" id="name" name="name" required>
 
